syntax = "proto3";

package proto;

message AccountInfo {
    string fullname = 1;
    string nickname = 2;
    string username = 3;
    string email = 4;
    string phonenumber = 5;
}

message OptionStruct {
    string ID = 1;
    string name = 2;
}

message AccountAddress {
    OptionStruct province = 1;
    OptionStruct city = 2;
    OptionStruct district = 3;
    string village = 4;
    string street = 5;
}

message AccountData {
    string ID = 1;
    string firstname = 2;
    string lastname = 3;
    AccountInfo accountInfo = 4;
    AccountAddress accountAddress = 5;
    string createdAt = 6;
    string updatedAt = 7;
    string createdBy = 8;
    string updatedBy = 9;
}

/* ================================ */
// CREATING MESSAGE ACCOUNT REQUEST //
/* ================================ */
message AddAccountRequest {
    string firstname = 1;
    string lastname = 2;
    string nickname = 3;
    string username = 4;
    string password = 5;
    string email = 6;
    string phoneNumber = 7;
}

message UpdateAccountRequest {
    string firstname = 1;
    string lastname = 2;
    string nickname = 3;
    string username = 4;
    string password = 5;
    string email = 6;
    string phoneNumber = 7;
    string provinceid = 8;
    string provincename = 9;
    string cityid = 10;
    string cityname = 11;
    string districtid = 12;
    string districtname = 13;
    string village = 14;
    string street = 15;
    string zipCode = 16;
}

message GetAccountRequest {
    string ID = 1;
    string fullname = 2;
    string nickname = 3;
    string username = 4;
}

message GetPaginationAccount {
    string ID = 1;
    string fullname = 2;
    string nickname = 3;
    string username = 4;
    int32 page = 5;
    int32 perpage = 6;
}

message DeleteAccountRequest {
    string ID = 1;
}

/* ================================= */
// CREATING MESSAGE ACCOUNT RESPONSE //
/* ================================= */
message AccountResponse {
    AccountData account = 1;
    repeated AccountData accounts = 2;
}

message AccountPaginationResponse {
    int32 page = 1;
    int32 perpage = 2;
    int32 totalPage = 3;
    int32 maxPage = 4;
    repeated AccountData accounts = 5;
}

message AccountMessageResponse {
    string ID = 1;
    string message = 2;
}